[project]
name = "vmware-manager"
version = "0.1.0"
description = "VMware vSphere platform management tool"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "Flask",
    "Connexion",
    "pyVmomi",
    "Flask-Cors"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.6"  # 可根据实际需要调整
