[project]
name = "vmware-manager"
version = "0.1.0"
description = "VMware vSphere platform management tool"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "FastAPI",
    "uvicorn[standard]",
    "pyVmomi",
    "loguru"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
